[metadata]
name = chillaxd
author = Yassine Lamgarchal
author-email = lamgarchal.yassine@gmail.com
summary = Distributed coordination framework based on ZeroMQ and RAFT consensus algorithm.
home-page = https://github.com/ylamgarchal/chillaxd
description-file = README.rst
license = Apache-2
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Topic :: System :: Distributed Computing

[files]
packages =
    chillaxd

[entry_points]
console_scripts =
    chillaxd = chillaxd.chillaxd:main
    chillax = chillaxd.chillax:main
